# websters

./: README.md  default.nix  ghcjs-base.nix  reflex.nix  servant-reflex.nix
backend/: Main.hs  default.nix  wzuri-backend.cabal
frontend/: Main.hs  default.nix  wzuri-frontend.cabal
interface/: Types.hs  default.nix  wzuri-interface.cabal
slides/: index.html
